2007-04-18  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/src/nsKeycodes.h: New file, copied nsKeycodes and
	nsSunKeycodes DOM<->GDK keysym tables from
	mozilla/widget/src/gtk/nsGtkEventHandler.cpp.

	* compzilla/src/compzillaWindow.cpp (DOMKeyCodeToKeySym): New,
	converts a DOM keyCode to a GDK keysym.
	(SendKeyEvent): Use DOMKeyCodeToKeySym and XKeysymToKeycode to get
	the proper X keycode to forward to the native window.

	* compzilla/src/compzillaControl.cpp (Filter): We're the only ones
	who should process DAMAGE events, so remove them.

	Also change DEBUG -> SPEW, to avoid conflicting with the define
	used by nsDebug.h.
	
2007-04-18  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/src/compzillaWindow.cpp (HandleEvent): Initial
	FocusIn/Out, DOMMouseScroll, and KeyPress/Release support.

	* compzilla/src/compzillaControl.cpp (InitOutputWindow): Call
	XSetInputFocus for the Moz window.

	* compzilla/components/compzillaWindowManager.js: Set
	content.tabIndex=1 so the canvas elements are focusable.

2007-04-15  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/src/compzillaControl.cpp (InitWindowState): If we're
	the window manager, add all existing windows.  Init Shape
	extension.  Remove DEMO_HACK.
	(WindowDamaged): Move XDamageNotify handler to here.

2007-04-14  Chris Toshok  <toshok@ximian.com>

	* compzilla/src/compzillaRenderingContext.cpp (Redraw): fix the
	non-1.8 branch case for scaling the rectangle.

2007-04-13  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/src/compzillaRenderingContext.cpp (Redraw): Convert
	damaged rect to Twips, using the nsPresContext.

	* compzilla/src/compzillaWindow.cpp (compzillaWindow): Use manual
	redirection, and XDamageReportRawRectangles.

2007-04-12  Chris Toshok  <toshok@ximian.com>

	* compzilla/components/compzillaWindowManager.js
	(HookupChromeEvents): make the mousedown handler a capture phase
	event handler, so we can raise the window if we mouse down